# bork

./: CMakeLists.txt  build.sh  readme.md
inc/: bork_defines.hpp  ezpz_jack.hpp  pattern.hpp  sampler.hpp  sequencer.hpp  transport.hpp
src/: main.cpp
