cmake_minimum_required(VERSION 3.16)
project(bork VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(bork src/main.cpp)
target_include_directories(bork PUBLIC
    inc
)
target_link_libraries(bork PRIVATE
    fmt
    jack
)

